Add log sender, add send-logs script, update Loki labels, and add /calculate-price endpoint
- Add log_sender.js to emit periodic info logs with graceful shutdown
- Add "send-logs" npm script to package.json
- Update Loki transport labels key from "app" to "service_name"
- Add /calculate-price endpoint to compute final price (includes 10% tax) and log errors

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "send-logs": "node log_sender.js"
   },
   "keywords": ["nodejs", "express", "winston", "loki", "logging"],
   "author": "",
